# NKP

./: .gitignore  README.md  pyproject.toml
nkp/: __init__.py  main.py  report.py
nkp/common/: const.py
nkp/data/: example.xlsx  library.db  report.csv
nkp/db/: __init__.py  database.py  initial_data.py  models.py
nkp/ui/: form.py
