[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nkp"
version = "0.1.0"
description = "Проект НКП"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "openpyxl",
    "sqlalchemy",
    "PySide6>=6.6.0",
    "qtpy",
]

[project.scripts]
start = "nkp.main:main" 